--- a/public/user/css/custom.css
+++ b/public/user/css/custom.css
@@ -1,2 +1,4 @@
 .product-img img{width: 100%;height: 254px;}
 .text-justify{text-align: justify;}
+.product-media img {height: auto;}
+.product-single .product-size-swatch .product-option{    font-size: 15px;padding-left: 4px;line-height: 1px;margin-bottom: 5px; }
